Cleanup pom, update Gson and make more future-proof