@@ -10,15 +10,6 @@
 
 	<artifactId>solarpaper-api</artifactId>
 
-	<properties>
-		<solar-parent.skipJavadoc>false</solar-parent.skipJavadoc>
-		<solar-parent.skipSources>false</solar-parent.skipSources>
-	</properties>
-
-	<scm>
-		<developerConnection>scm:git:https://github.com/SolarMC-Dev/SolarPaper-API.git</developerConnection>
-	</scm>
-
 	<dependencies>
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
@@ -51,7 +42,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
+			<version>2.8.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
@@ -91,21 +82,7 @@
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm-commons</artifactId>
-			<version>9.1</version>
+			<version>${solar-parent.asmVersion}</version>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<trimStackTrace>false</trimStackTrace>
-					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation --enable-preview</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
 </project>
